update bug overflow + validator w3c ok

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -87,10 +87,14 @@
   .deco {
     margin-top: 0px;
     margin-bottom: 30px;
-  margin:0px;
+    margin: 0px;
   }
 
   #respSize {
+    width: 50%;
+  }
+
+  #respSize2 {
     width: 50%;
   }
 
@@ -166,8 +170,16 @@
     margin-top: 4px;
   }
 
+  h4 {
+    display: block;
+    margin-block-start: 4px;
+    margin-block-end: 0px;
+    margin-inline-start: 3px;
+    margin-inline-end: 0px;
+  }
+
   .container3 .sellerDiv p {
-    margin-left: 4Px;
+    margin-left: 3px;
   }
 
   .leftF {
@@ -282,7 +294,11 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    padding-right: 26px;
+    padding-right: 12px;
+  }
+
+  .h4StyleAdvantage {
+    font-size: 10px;
   }
 
   .flexImgAdv {
